# testC

./: CMakeLists.txt  README.md  appveyor.yml
src/: foo.cpp
test/: test.cpp
